--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1815,13 +1815,13 @@
   "pli-tv-kd13:36.1.54": "He’s not purified of those offenses.” ",
   "pli-tv-kd13:36.1.55": "The second group of nine is finished. ",
   "pli-tv-kd13:36.2.0": "11. The third group of nine ",
-  "pli-tv-kd13:36.2.1": "“It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both of the same name and of various names, both of the same kind and of various kinds, ",
-  "pli-tv-kd13:36.2.2": "both of the same sort and of various sorts. ",
+  "pli-tv-kd13:36.2.1": "“It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both having the same name and having different names, both of the same kind and of different kinds, ",
+  "pli-tv-kd13:36.2.2": "both of the same sort and of different sorts. ",
   "pli-tv-kd13:36.2.3": "He asks the Sangha for simultaneous probation for those offenses, ",
   "pli-tv-kd13:36.2.4": "which he gets. ",
-  "pli-tv-kd13:36.2.5": "While on probation, he commits a number of offenses entailing suspension—specified and unconcealed. ",
+  "pli-tv-kd13:36.2.5": "While on probation, he commits a number of offenses entailing suspension, unconcealed and specified. ",
   "pli-tv-kd13:36.2.6": "He asks the Sangha to send him back to the beginning for those offenses, ",
-  "pli-tv-kd13:36.2.7": "and it does. But the legal procedure is illegitimate, reversible, and unfit to stand. And the Sangha gives him simultaneous probation illegitimately. ",
+  "pli-tv-kd13:36.2.7": "which it does. But the legal procedure is illegitimate, reversible, and unfit to stand. The Sangha gives him the simultaneous probation illegitimately. ",
   "pli-tv-kd13:36.2.8": "Thinking that he’s on probation, he commits a number of offenses entailing suspension—specified and unconcealed. ",
   "pli-tv-kd13:36.2.9": "At this point, he remembers offenses committed while on probation for the former offenses, and he remembers offenses committed while on probation for the further offenses. ",
   "pli-tv-kd13:36.2.10": "He considers all this ",
