--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1828,14 +1828,14 @@
   "pli-tv-kd13:36.2.20": "and thinks, ‘Let me ask the Sangha to send me back to the beginning for all those offenses. The procedure must be legitimate, irreversible, and fit to stand. The simultaneous probation, ",
   "pli-tv-kd13:36.2.21": "the trial period, and the rehabilitation must all be legitimate.’ ",
   "pli-tv-kd13:36.2.22": "He asks the Sangha to be sent back to the beginning in this way, ",
-  "pli-tv-kd13:36.2.24": "and the Sangha sends him back to the beginning for those offenses committed while on probation. The legal procedure is legitimate, irreversible, and fit to stand. And the Sangha gives him simultaneous probation legitimately. ",
-  "pli-tv-kd13:36.2.25": "It also gives him the trial period of six days legitimately, and it rehabilitates him legitimately. ",
-  "pli-tv-kd13:36.2.26": "He’s purified from those offenses. ",
-  "pli-tv-kd13:36.2.27": "It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both of the same name and of various names, both of the same kind and of various kinds, ",
-  "pli-tv-kd13:36.2.28": "both of the same sort and of various sorts. ",
+  "pli-tv-kd13:36.2.24": "which it does. The legal procedure is legitimate, irreversible, and fit to stand. The Sangha gives him the simultaneous probation, ",
+  "pli-tv-kd13:36.2.25": "the trial period, and the rehabilitation legitimately. ",
+  "pli-tv-kd13:36.2.26": "He’s purified of those offenses. ",
+  "pli-tv-kd13:36.2.27": "It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both having the same name and having different names, both of the same kind and of different kinds, ",
+  "pli-tv-kd13:36.2.28": "both of the same sort and of different sorts. ",
   "pli-tv-kd13:36.2.29": "He asks the Sangha for simultaneous probation for those offenses, ",
   "pli-tv-kd13:36.2.30": "which he gets. ",
-  "pli-tv-kd13:36.2.31": "While on probation, he commits a number of offenses entailing suspension—specified and concealed. ",
+  "pli-tv-kd13:36.2.31": "While on probation, he commits a number of offenses entailing suspension, concealed and specified. ",
   "pli-tv-kd13:36.2.32": "He asks the Sangha to send him back to the beginning for those offenses, ",
   "pli-tv-kd13:36.2.33": "and it does. But the legal procedure is illegitimate, reversible, and unfit to stand. And the Sangha gives him simultaneous probation illegitimately. ",
   "pli-tv-kd13:36.2.34": "Thinking that he’s on probation, he commits a number of offenses entailing suspension—specified and concealed. ",
