--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1845,8 +1845,8 @@
   "pli-tv-kd13:36.2.47": "He asks the Sangha to be sent back to the beginning in this way, ",
   "pli-tv-kd13:36.2.48": "which it does. The legal procedure is legitimate, irreversible, and fit to stand. The Sangha gives him the simultaneous probation, the trial period, and the rehabilitation legitimately. ",
   "pli-tv-kd13:36.2.49": "He’s purified of those offenses. ",
-  "pli-tv-kd13:36.2.50": "It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both of the same name and of various names, both of the same kind and of various kinds, ",
-  "pli-tv-kd13:36.2.51": "both of the same sort and of various sorts. ",
+  "pli-tv-kd13:36.2.50": "It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both having the same name and having different names, both of the same kind and of different kinds, ",
+  "pli-tv-kd13:36.2.51": "both of the same sort and of different sorts. ",
   "pli-tv-kd13:36.2.52": "He asks the Sangha for simultaneous probation for those offenses, ",
   "pli-tv-kd13:36.2.53": "which he gets. ",
   "pli-tv-kd13:36.2.54": "While on probation, he commits a number of offenses entailing suspension—specified and both concealed and unconcealed. ",
