--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1580,7 +1580,7 @@
   "pli-tv-kd13:31.3.89": "He’s sure of some of them, but unsure of others. ",
   "pli-tv-kd13:31.3.90": "He conceals the offenses he’s sure of, ",
   "pli-tv-kd13:31.3.91": "but not those he’s unsure of. ",
-  "pli-tv-kd13:31.3.92": "He then disrobes. Being re-ordained and having become sure of all of them, he conceals all of them. ",
+  "pli-tv-kd13:31.3.92": "He then disrobes. Being reordained and having become sure of all of them, he conceals all of them. ",
   "pli-tv-kd13:31.3.94": "He’s to be sent back to the beginning. ",
   "pli-tv-kd13:31.3.95": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
   "pli-tv-kd13:31.3.96": "“It may be that a monk on probation commits a number of unconcealed offenses entailing suspension and then becomes a novice monk … ",
