--- a/translation/de/sabbamitta/sutta/dn/dn22_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn22_translation-de-sabbamitta.json
@@ -156,7 +156,7 @@
   "dn22:16.6": "Wenn der Faktor des Erwachens Ekstase in ihm ist … ",
   "dn22:16.7": "Wenn der Faktor des Erwachens Stille in ihm ist … ",
   "dn22:16.8": "Wenn der Faktor des Erwachens Versenkung in ihm ist … ",
-  "dn22:16.9": "Wenn der Faktor des Erwachens Gleichmut in ihm ist, versteht er: ‚In mir ist der Faktor des Erwachens Gleichmut.‘ Wenn der Faktor des Erwachens Gleichmut nicht in ihm ist, versteht er: ‚In mir ist nicht der Faktor des Erwachens Gleichmut.‘ Er versteht, wie der Faktor des Erwachens Gleichmut, wenn er nicht entstanden ist, entsteht; und wie der Faktor des Erwachens Gleichmut, wenn er entstanden ist, sich vollständig entwickelt. ",
+  "dn22:16.9": "Wenn der Faktor des Erwachens Gleichmut in ihm ist, versteht er: ‚In mir ist der Faktor des Erwachens Gleichmut.‘ Wenn der Faktor des Erwachens Gleichmut nicht in ihm ist, versteht er: ‚In mir ist nicht der Faktor des Erwachens Gleichmut.‘ Er versteht, wie der Faktor des Erwachens Gleichmut, wenn er nicht entstanden ist, entsteht; und wie der Faktor des Erwachens Gleichmut, wenn er entstanden ist, vollständig entwickelt wird. ",
   "dn22:16.10": "Und so meditiert er, indem er einen Aspekt der natürlichen Gesetzmäßigkeiten innerlich beobachtet, indem er ihn äußerlich beobachtet, indem er ihn sowohl innerlich als auch äußerlich beobachtet. ",
   "dn22:16.11": "Er meditiert, indem er die natürlichen Gesetzmäßigkeiten beobachtet, wie sie erzeugt werden müssen, wie sie verschwinden müssen, wie sie sowohl erzeugt werden als auch verschwinden müssen. ",
   "dn22:16.12": "Oder die Achtsamkeit, dass die natürlichen Gesetzmäßigkeiten da sind, ist verankert, soweit das für das Wissen und die Achtsamkeit nötig ist. Er meditiert unabhängig und ergreift nichts in der Welt. ",
