--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn22.85:0.2": "9. Das Kapitel mit Ordensältesten ",
   "sn22.85:0.3": "Mit Yamaka ",
   "sn22.85:1.1": "Einmal hielt sich der Ehrwürdige Sāriputta bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. ",
-  "sn22.85:1.2": "Zu dieser Zeit hatte ein Mönch namens Yamaka den folgenden schädlichen Irrglauben: "
+  "sn22.85:1.2": "Zu dieser Zeit hatte ein Mönch namens Yamaka den folgenden schädlichen Irrglauben: ",
+  "sn22.85:1.3": "„Wie ich die Lehre des Buddha verstehe, wird ein Mönch, der die Befleckungen aufgelöst hat, vernichtet und zerstört, wenn sein Körper auseinanderbricht, und besteht nach dem Tod nicht fort.“ "
 }
