--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -5,5 +5,6 @@
   "sn22.85:1.1": "Einmal hielt sich der Ehrwürdige Sāriputta bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. ",
   "sn22.85:1.2": "Zu dieser Zeit hatte ein Mönch namens Yamaka den folgenden schädlichen Irrglauben: ",
   "sn22.85:1.3": "„Wie ich die Lehre des Buddha verstehe, wird ein Mönch, der die Befleckungen aufgelöst hat, vernichtet und zerstört, wenn sein Körper auseinanderbricht, und besteht nach dem Tod nicht fort.“ ",
-  "sn22.85:2.1": "Mehrere Mönche und Nonnen hörten davon. "
+  "sn22.85:2.1": "Mehrere Mönche und Nonnen hörten davon. ",
+  "sn22.85:2.3": "Sie gingen zu Yamaka und tauschten Willkommensgrüße mit ihm aus. "
 }
