--- a/translation/de/sabbamitta/sutta/sn/sn10/sn10.9_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn10/sn10.9_translation-de-sabbamitta.json
@@ -11,6 +11,6 @@
   "sn10.9:2.4": "wenn sie die den Zustand der Unsterblichkeit lehrt. ",
   "sn10.9:3.1": "Doch die Weisen – ",
   "sn10.9:3.2": "es scheint, als würden sie diese Ambrosia trinken, ",
-  "sn10.9:3.3": "die Unwiderstehliche, so köstlich und nahrhaft, ",
+  "sn10.9:3.3": "die unwiderstehliche, so köstlich und nahrhaft, ",
   "sn10.9:3.4": "wie Wanderer eine kühlende Wolke genießen.“ "
 }
