--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1912,6 +1912,9 @@
   "pli-tv-kd13:36.4.56": "There both perceive accordingly, ",
   "pli-tv-kd13:36.4.57": "And just the same for unsure. ",
   "pli-tv-kd13:36.4.58": "And both see it as mixed, ",
+  "pli-tv-kd13:36.4.59": "They see it as not light; ",
+  "pli-tv-kd13:36.4.60": "And both see it as light. ",
+  "pli-tv-kd13:36.4.61": "And just so one conceals, ",
   "pli-tv-kd13:36.4.63": "Insane, and recitation, ",
   "pli-tv-kd13:36.4.65": "The teachers of analytical statements, ",
   "pli-tv-kd13:36.4.66": "Who are the inspiration of Sri Lanka, ",
