--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -57,7 +57,7 @@
   "pli-tv-kd14:3.1.3": "If a legal issue is resolved like this, it is resolved legitimately by face-to-face resolution. ",
   "pli-tv-kd14:3.1.4": "An individual who speaks in accordance with the Teaching persuades several people who speak contrary to the Teaching—convinces them, makes them see, makes them consider, shows them, teaches them: ",
   "pli-tv-kd14:3.1.5": "‘This is the Teaching, this is the Monastic Law, this is the Teacher’s instruction; learn this, accept this.’ ",
-  "pli-tv-kd14:3.1.6": "If a legal issue is resolved like this, it is resolved legitimately by resolution face-to-face. ",
+  "pli-tv-kd14:3.1.6": "If a legal issue is resolved like this, it is resolved legitimately by face-to-face resolution. ",
   "pli-tv-kd14:3.1.7": "An individual who speaks in accordance with the Teaching persuades a sangha that speaks contrary to the Teaching—convinces it, makes it see, makes it consider, shows it, teaches it: ",
   "pli-tv-kd14:3.1.8": "‘This is the Teaching, this is the Monastic Law, this is the Teacher’s instruction; learn this, accept this.’ ",
   "pli-tv-kd14:3.1.9": "If a legal issue is resolved like this, it is resolved legitimately by resolution face-to-face. ",
