--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -601,7 +601,7 @@
   "pli-tv-kd14:12.5.7.7": "He shouldn’t cancel the observance-day procedure of a regular monk. ",
   "pli-tv-kd14:12.5.7.8": "He shouldn’t cancel the invitation of a regular monk. ",
   "pli-tv-kd14:12.5.7.9": "He shouldn’t direct a regular monk. ",
-  "pli-tv-kd14:12.5.7.10": "He shouldn’t criticize a regular monk. ",
+  "pli-tv-kd14:12.5.7.10": "He shouldn’t give instructions to a regular monk. ",
   "pli-tv-kd14:12.5.7.11": "He shouldn’t ask a regular monk for permission to accuse him of an offense. ",
   "pli-tv-kd14:12.5.7.12": "He shouldn’t accuse a regular monk of an offense. ",
   "pli-tv-kd14:12.5.7.13": "He shouldn’t remind a regular monk of an offense. ",
