--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -514,8 +514,8 @@
   "pli-tv-kd14:11.1.0": "6. Further penalty ",
   "pli-tv-kd14:11.1.1": "On one occasion, when the monk Upavāḷa was being examined in the midst of the Sangha about an offense, he asserted things after denying them, denied things after asserting them, evaded the issue, and lied. ",
   "pli-tv-kd14:11.1.2": "The monks of few desires complained and criticized him, ",
-  "pli-tv-kd14:11.1.3": "“How could the monk Upavāḷa act like this?” ",
-  "pli-tv-kd14:11.1.4": "They told the Buddha. Soon afterwards he had the Sangha of monks gathered and questioned them: ",
+  "pli-tv-kd14:11.1.3": "“How can the monk Upavāḷa act like this?” ",
+  "pli-tv-kd14:11.1.4": "They told the Buddha. … ",
   "pli-tv-kd14:11.1.5": "“Is it true, monks, that the monk Upavāḷa is acting like this?” ",
   "pli-tv-kd14:11.1.6": "“It’s true, Sir.” … ",
   "pli-tv-kd14:11.1.7": "After rebuking him … ",
