--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -582,9 +582,9 @@
   "pli-tv-kd14:12.4.15": "those who are ignorant, incompetent, often committing offenses, lacking in boundaries; ",
   "pli-tv-kd14:12.4.16": "those who are constantly and improperly socializing with householders. ",
   "pli-tv-kd14:12.4.18": "The Sangha may, if it wishes, do a procedure of further penalty against another three kinds of monks: ",
-  "pli-tv-kd14:12.4.19": "those who have failed in the higher morality; those who have failed in the higher conduct; those who have failed in view. ",
+  "pli-tv-kd14:12.4.19": "those who've failed in the higher morality; those who've failed in the higher conduct; those who've failed in view. ",
   "pli-tv-kd14:12.4.21": "The Sangha may, if it wishes, do a procedure of further penalty against another three kinds of monks: ",
-  "pli-tv-kd14:12.4.22": "those who disparage the Buddha; those who disparage the Teaching; those who disparage the Sangha. ",
+  "pli-tv-kd14:12.4.22": "those who disparage the Buddha; those who disparage the Teaching; those who disparage the Sangha.” ",
   "pli-tv-kd14:12.5.0": "6.4 The eighteen kinds of conduct ",
   "pli-tv-kd14:12.5.1": "“A monk who has had a legal procedure of further penalty done against himself should conduct himself properly. ",
   "pli-tv-kd14:12.5.2": "This is the proper conduct: ",
