--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -586,7 +586,7 @@
   "pli-tv-kd14:12.4.21": "The Sangha may, if it wishes, do a procedure of further penalty against another three kinds of monks: ",
   "pli-tv-kd14:12.4.22": "those who disparage the Buddha; those who disparage the Teaching; those who disparage the Sangha.” ",
   "pli-tv-kd14:12.5.0": "6.4 The eighteen kinds of conduct ",
-  "pli-tv-kd14:12.5.1": "“A monk who has had a legal procedure of further penalty done against himself should conduct himself properly. ",
+  "pli-tv-kd14:12.5.1": "“A monk who's had a legal procedure of further penalty done against himself should conduct himself properly. ",
   "pli-tv-kd14:12.5.2": "This is the proper conduct: ",
   "pli-tv-kd14:12.5.3": "He shouldn’t give the full ordination. ",
   "pli-tv-kd14:12.5.4": "He shouldn’t give formal support. ",
@@ -608,7 +608,7 @@
   "pli-tv-kd14:12.5.8": "He shouldn’t associate inappropriately with other monks.” ",
   "pli-tv-kd14:12.6.1": "The Sangha then did a legal procedure of further penalty against the monk Upavāḷa. ",
   "pli-tv-kd14:13.1.0": "7. Covering over as if with grass ",
-  "pli-tv-kd14:13.1.1": "At one time, while the monks were arguing and disputing, they did and said many things unworthy of a monastic. ",
+  "pli-tv-kd14:13.1.1": "At one time, while the monks were arguing and disputing, they did and said many things unworthy of monastics. ",
   "pli-tv-kd14:13.1.2": "They considered this and thought, ",
   "pli-tv-kd14:13.1.4": "“If we deal with one another for these offenses, this legal issue might lead to harshness, nastiness, and schism. ",
   "pli-tv-kd14:13.1.5": "So what should we do now?” ",
