--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -615,14 +615,14 @@
   "pli-tv-kd14:13.1.6": "They told the Buddha. ",
   "pli-tv-kd14:13.1.7": "“It may be, monks, that monks who are arguing and disputing do and say many things unworthy of monastics. ",
   "pli-tv-kd14:13.1.8": "If they consider this and think, ",
-  "pli-tv-kd14:13.1.10": "‘If we deal with one another for these offenses, this legal issue might lead to harshness, nastiness, and schism,’ then I allow you to resolve this legal issue by covering over as if with grass. ",
+  "pli-tv-kd14:13.1.10": "‘If we deal with one another for these offenses, this legal issue might lead to harshness, nastiness, and schism,’ then I allow you to resolve that legal issue by covering over as if with grass. ",
   "pli-tv-kd14:13.2.1": "And it should be resolved like this. ",
   "pli-tv-kd14:13.2.2": "Everyone should gather in one place. A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd14:13.2.3": "‘Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd14:13.2.4": "While we were arguing and disputing, we did and said many things unworthy of a monastic. ",
+  "pli-tv-kd14:13.2.4": "While we were arguing and disputing, we did and said many things unworthy of monastics. ",
   "pli-tv-kd14:13.2.5": "If we deal with one another for these offenses, this legal issue might lead to harshness, nastiness, and schism. ",
   "pli-tv-kd14:13.2.6": "If it seems appropriate to the Sangha, the Sangha should resolve this legal issue by covering over as if with grass, except for heavy offenses and offenses connected with householders.’ ",
-  "pli-tv-kd14:13.2.7": "The monks belonging to one side should be informed by a competent and capable monk belonging to their own side: ",
+  "pli-tv-kd14:13.2.7": "The monks belonging to one side should then be informed by a competent and capable monk belonging to their own side: ",
   "pli-tv-kd14:13.2.8": "‘Please, Venerables, I ask you to listen. ",
   "pli-tv-kd14:13.2.9": "While we were arguing and disputing, we did and said many things unworthy of a monastic. ",
   "pli-tv-kd14:13.2.10": "If we deal with one another for these offenses, this legal issue might lead to harshness, nastiness, and schism. ",
