--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -648,12 +648,12 @@
   "pli-tv-kd14:13.3.14": "The Sangha approves and is therefore silent. I’ll remember it thus.’ ",
   "pli-tv-kd14:13.3.15": "And a competent and capable monk belonging to the other side should inform the Sangha: ",
   "pli-tv-kd14:13.3.16": "‘Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd14:13.3.17": "While we were arguing and disputing, we did and said many things unworthy of a monastic. ",
+  "pli-tv-kd14:13.3.17": "While we were arguing and disputing, we did and said many things unworthy of monastics. ",
   "pli-tv-kd14:13.3.18": "If we deal with one another for these offenses, this legal issue might lead to harshness, nastiness, and schism. ",
   "pli-tv-kd14:13.3.19": "If it seems appropriate to the Sangha, then for the benefit of these venerables and myself, I’ll confess in the midst of the Sangha both their and my own offenses by covering over as if with grass, except for heavy offenses and offenses connected with householders. ",
   "pli-tv-kd14:13.3.20": "This is the motion. ",
-  "pli-tv-kd14:13.3.21": "‘Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd14:13.3.22": "While we were arguing and disputing, we did and said many things unworthy of a monastic. ",
+  "pli-tv-kd14:13.3.21": "Please, Venerables, I ask the Sangha to listen. ",
+  "pli-tv-kd14:13.3.22": "While we were arguing and disputing, we did and said many things unworthy of monastics. ",
   "pli-tv-kd14:13.3.23": "If we deal with one another for these offenses, this legal issue might lead to harshness, nastiness, and schism. ",
   "pli-tv-kd14:13.3.24": "For the benefit of these venerables and myself, I confess in the midst of the Sangha both their and my own offenses by covering over as if with grass, except for heavy offenses and offenses connected with householders. ",
   "pli-tv-kd14:13.3.25": "Any monk who approves of confessing our offenses in the midst of the Sangha by covering over as if with grass, except for heavy offenses and offenses connected with householders should remain silent. ",
