--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -663,9 +663,9 @@
   "pli-tv-kd14:13.4.1": "In this way those monks are cleared of those offenses, except for heavy offenses and offenses connected with householders, and except for those monks who voice their disapproval and those who are absent.” ",
   "pli-tv-kd14:14.1.0": "8. Legal issues ",
   "pli-tv-kd14:14.1.1": "On one occasion monks were disputing with monks, monks with nuns, and nuns with monks. Standing with the nuns, the monk Channa disputed with the monks, making others side with the nuns. ",
-  "pli-tv-kd14:14.1.2": "The monks of few desires complained and criticized him, ",
+  "pli-tv-kd14:14.1.2": "The monks of few desires … complained and criticized him, ",
   "pli-tv-kd14:14.1.3": "“How can the monk Channa act like this?” ",
-  "pli-tv-kd14:14.1.4": "They told the Buddha. Soon afterwards he had the Sangha of monks gathered and questioned them: ",
+  "pli-tv-kd14:14.1.4": "They told the Buddha. … ",
   "pli-tv-kd14:14.1.5": "“Is it true, monks, that the monk Channa is acting like this?” ",
   "pli-tv-kd14:14.1.6": "“It’s true, Sir.” … ",
   "pli-tv-kd14:14.1.7": "After rebuking him … ",
